--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
+    #lol {
+        width: 100px;
+        height:100px;
+        background-color: white;
+        margin-top:100px;
+    }
 
+  
 }
